crates/cypher-sema/tests/snapshots/resolved_hir__13_with_alias.snap
---
source: crates/cypher-sema/tests/resolved_hir.rs
expression: "pipeline_stmt(stmt, false)"
---
Statement {
  span: 0..0
  bindings: [
    Var(0) 0: a (Node) @0..0
    Var(1) 1: b (Value) @0..0
  ]
  clauses: [
    Match @0..0 {
      Pattern {
        part[0] [
          Node(a[bind:Var(0)←Node@0..0]) @0..0
        ]
      }
    }
    With @0..0 {
      proj[0]: Var(0)[a←Node@0..0] AS b
    }
    Return(distinct=false) @0..0 {
      proj[0]: Var(1)[b←Value@0..0]
    }
  ]
}
