crates/cypher-sema/tests/snapshots/resolved_hir__21_map_projection.snap
---
source: crates/cypher-sema/tests/resolved_hir.rs
expression: "pipeline(\"MATCH (a) RETURN a { .name, .age }\")"
---
Statement {
  span: 0..34
  bindings: [
    Var(0) 0: a (Node) @7..8
  ]
  clauses: [
    Match @0..9 {
      Pattern {
        part[0] [
          Node(a[bind:Var(0)←Node@7..8]) @5..9
        ]
      }
    }
    Return(distinct=false) @9..34 {
      proj[0]: Var(0)[a←Node@7..8] {.name, .age}
    }
  ]
}
