crates/cypher-sema/tests/snapshots/resolved_hir__22_create_binds.snap
---
source: crates/cypher-sema/tests/resolved_hir.rs
expression: "pipeline_stmt(stmt, false)"
---
Statement {
  span: 0..0
  bindings: [
    Var(0) 0: n (Node) @0..0
  ]
  clauses: [
    Create @0..0 {
      Pattern {
        part[0] [
          Node(n[bind:Var(0)←Node@0..0]:Person) @0..0
        ]
      }
    }
    Return(distinct=false) @0..0 {
      proj[0]: Var(0)[n←Node@0..0]
    }
  ]
}
