crates/cypher-sema/tests/snapshots/resolved_hir__23_call_yield.snap
---
source: crates/cypher-sema/tests/resolved_hir.rs
expression: "pipeline_stmt(stmt, false)"
---
Statement {
  span: 0..0
  bindings: [
    Var(0) 0: name (Value) @0..0
  ]
  clauses: [
    Call(db.labels) @0..0 {
      yield: name
    }
    Return(distinct=false) @0..0 {
      proj[0]: Var(0)[name←Value@0..0]
    }
  ]
}
